@@ -13,6 +13,8 @@ namespace Elegent
 
 /**
  * \brief Predazzi, Petrov and Prokudin model of p-p and p-anti p elastic scattering.
+ * References:
+ *	[1] PETROV, V. A. and PROKUDIN, A. V., Eur. Phys. J. C23 (2002) 135–143
  **/
 class PPPModel : public Model
 {
