@@ -1,6 +1,8 @@
 future release
 	* naming scheme for distributions and plots
 		...<mode>,<sqrt(s)>GeV...
+	* minor modification: JenkovszkyModel updated to match with Int. J. Mod. Phys. A26 (2011)
+	* BHModel: updated to match with BLOCK, M. M., Phys. Rept. 436 (2006) 71-215
 
 release 1.0
 	* first fully operational version
